<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GeoQuiz</string>

    <!-- Questions -->
    <string name="heading_australia">Australia</string>
    <string name="question_australia">Is Canberra is the capital of Australia?</string>

    <string name="heading_oceans">Oceans</string>
    <string name="question_oceans">Do oceans have water in them?</string>

    <string name="heading_mideast">Mideast</string>
    <string name="question_mideast">Is the mideast in the middle of the east?</string>

    <string name="heading_Africa">Africa</string>
    <string name="question_africa">Do Australians live in Africa?</string>

    <string name="heading_americas">America</string>
    <string name="question_americas">Does the second amendment justify the overwhelming mass shooting in America?</string>

    <string name="heading_asia">Asia</string>
    <string name="question_asia" tools:ignore="Typos">How much wood could a wood chuck chuck if a wood chuck lived in asia?</string>

    <string name="heading_life">Life</string>
    <string name="question_life">What is the meaning of life?</string>

    <string name="heading_tree">Tree</string>
    <string name="question_tree">If a tree falls but no one is their to hear it does it make a sound?</string>

    <string name="heading_amazon">Amazon</string>
    <string name="question_amazon">Does amazon have same day shipping?</string>

    <!-- Buttons -->
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="next_button">Next</string>
    <string name="prv_button">Previous</string>
    <string name="start_button">Start</string>
    <string name="try_again_button">Try Again?</string>

    <!-- Toasts -->
    <string name="correct_toast">Nice Job!</string>
    <string name="incorrect_toast">Wrong smh</string>
    <string name="already_answered">You have already answered this question</string>

    <!-- Image Descriptions -->
    <string name="background_image_desc">Geo Quiz Back Ground Image</string>
    <string name="homescreen_image_desc">Geo Quiz Home Screen Image</string>


    <!-- Game Text -->
    <string name="welcome_text">Welcome to Geo Quiz!</string>
    <string name="your_score">Your score: %1$d%%</string>
    <string name="loading_score">Your score is loading!</string>




    <!--Cheating-->
    <string name="warning_text">Are you sure you want to compromise your morals?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat</string>
    <string name="judgment_toast">Cheating is wrong I have your IP</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="answerIs_text">The answer is:</string>
    <string name="cheaters_never_prosper">Cheaters never prosper</string>
    <string name="final_score">Final Score: %1$d%%</string>
    <string name="cheat_penalty">%1$d%%</string>

</resources>