<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/cheat_activity_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/homescreen_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/endoscript"
        android:orientation="vertical"
        android:text="@string/warning_text"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="134dp"
        android:layout_marginTop="250dp"
        android:fontFamily="@font/endoscript"
        android:orientation="vertical"
        android:text="Answer"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp" />

    <ImageButton
        android:layout_centerInParent="true"
        android:id="@+id/show_answer_button"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="130dp"
        android:layout_marginBottom="96dp"
        android:background="@null"
        android:contentDescription="@string/show_answer_button"
        android:scaleType="fitCenter"
        android:src="@drawable/show_button" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@null"
        android:contentDescription="@string/prv_button"
        android:scaleType="fitCenter"
        android:src="@drawable/prv_bubble" />

</RelativeLayout>
